--- a/RINNA_RACHMATIKA.ipynb
+++ b/RINNA_RACHMATIKA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOVzj9Sg4m84BAgYrqM3jlV",
+      "authorship_tag": "ABX9TyMD8szOdnZGgic3ZjMe8hWV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7329,6 +7329,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Setiap sel pada heatmap direpresentasikan dengan warna yang mencerminkan nilai korelasi antara dua variabel. Biasanya, warna yang lebih gelap menunjukkan korelasi yang lebih tinggi, sementara warna yang lebih terang menunjukkan korelasi yang lebih rendah atau tidak ada korelasi."
+      ],
+      "metadata": {
+        "id": "MZXl-aE3vR5P"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import seaborn as sns\n",
@@ -7363,9 +7372,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Setiap sel pada heatmap direpresentasikan dengan warna yang mencerminkan nilai korelasi antara dua variabel. Biasanya, warna yang lebih gelap menunjukkan korelasi yang lebih tinggi, sementara warna yang lebih terang menunjukkan korelasi yang lebih rendah atau tidak ada korelasi.\n",
+        "Angka dalam setiap sel heatmap menunjukkan nilai korelasi antara dua variabel. Nilai korelasi berkisar dari -1 hingga 1. Korelasi 1 menunjukkan hubungan linear positif sempurna, -1 menunjukkan hubungan linear negatif sempurna, dan 0 menunjukkan tidak ada hubungan linear antara dua variabel.\n",
         "\n",
-        "Dari Grafik diatas Korelasi 1 menunjukkan hubungan linear positif yang sempurna."
+        "Dari Grafik diatas menunjukkan hubungan linear positif yang sempurna."
       ],
       "metadata": {
         "id": "lDQQ8wR1uvKl"
