--- a/RINNA_RACHMATIKA.ipynb
+++ b/RINNA_RACHMATIKA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMD8szOdnZGgic3ZjMe8hWV",
+      "authorship_tag": "ABX9TyPQSmQ0h5cEGDGZyC/lgPE6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7372,9 +7372,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Angka dalam setiap sel heatmap menunjukkan nilai korelasi antara dua variabel. Nilai korelasi berkisar dari -1 hingga 1. Korelasi 1 menunjukkan hubungan linear positif sempurna, -1 menunjukkan hubungan linear negatif sempurna, dan 0 menunjukkan tidak ada hubungan linear antara dua variabel.\n",
+        "Koefesien\n",
+        "Korelasi menunjukkan kekuatan (strength) hubungan linear dan arah hubungan. Jika koefesien korelasi positif, maka kedua variabel mempunyai\n",
+        "hubungan searah. Artinya jika nilai variabel X tinggi, maka nilai variabel\n",
+        "Y akan tinggi pula. Sebaliknya, jika koefesien korelasi negatif, maka kedua variabel\n",
+        "mempunyai hubungan terbalik. Artinya jika nilai variabel X tinggi, maka\n",
+        "nilai variabel Y akan menjadi rendah (dan sebaliknya). Warna semakin gelap artinya semakin berkorelasi. Tapi interpretasinya mengikuti ini Bu:\n",
+        "0 : Tidak ada korelasi antara dua variabel\n",
+        ">0 0,25 : Korelasi sangat lemah\n",
+        ">0,25 0,5 : Korelasi cukup\n",
+        ">0,5 0,75 : Korelasi kuat\n",
+        ">0,75 0,99 : Korelasi sangat kuat\n",
         "\n",
-        "Dari Grafik diatas menunjukkan hubungan linear positif yang sempurna."
+        "Dari grafik diatas koefisien korelasinya kecil, paling tinggi -0.3"
       ],
       "metadata": {
         "id": "lDQQ8wR1uvKl"
