--- a/RINNA_RACHMATIKA_DA_TUGAS_2.ipynb
+++ b/RINNA_RACHMATIKA_DA_TUGAS_2.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNY+Nror2ITK7AZD49oGvc9",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyN6AejvJ6E5Es8sKJTifUOE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +26,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/rinnarachma/latihan-DA/blob/main/RINNA_RACHMATIKA_DA_TUGAS_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **MODEL SUPERVISED LEARNING - PREDIKSI CHURN PELANGGAN**"
+      ],
+      "metadata": {
+        "id": "FuEW_woLaNei"
+      }
     },
     {
       "cell_type": "code",
@@ -223,7 +233,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Random Forest"
+        "##**Random Forest**"
       ],
       "metadata": {
         "id": "TkLaSBLZItI5"
@@ -317,7 +327,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "GRADIENT BOSTING"
+        "## **Gradient Bosting**"
       ],
       "metadata": {
         "id": "ZAnBCrPlIv5d"
@@ -396,7 +406,7 @@
         },
         "outputId": "f99f6533-9814-4653-cef5-f86a0040f1ae"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -430,7 +440,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Uji Cross-validation dengan menggunakan accuracy untuk setiap fold"
+        "## **Uji Cross-validation dengan menggunakan accuracy untuk setiap fold**"
       ],
       "metadata": {
         "id": "6H5oiG08WA2C"
@@ -450,7 +460,7 @@
       "metadata": {
         "id": "VbGiPWyWWDd6"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -463,7 +473,7 @@
       "metadata": {
         "id": "Ehv8kXFpWHVD"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -480,7 +490,7 @@
       "metadata": {
         "id": "AA398zs3WJe2"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -493,7 +503,7 @@
       "metadata": {
         "id": "OQaLLBgkWRad"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -506,7 +516,7 @@
       "metadata": {
         "id": "BKg2b4jGWTcY"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -519,7 +529,7 @@
       "metadata": {
         "id": "0XXxj40tWVaw"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -532,7 +542,7 @@
       "metadata": {
         "id": "v3UR9mIIWeNl"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -552,7 +562,7 @@
         "id": "OJTnPczrWgaN",
         "outputId": "1a8776c6-b4c5-48b6-934e-a5b5b8e4dd2c"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
