--- a/RINNA_RACHMATIKA_DA_TUGAS_2.ipynb
+++ b/RINNA_RACHMATIKA_DA_TUGAS_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMlGaQkJWjMVEOIxbK4Q45K",
+      "authorship_tag": "ABX9TyNo5PrSEJHF3h54KC/Gsezg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1355,21 +1355,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Dari hasil evaluasi terdapat beberapa hal yang dapat diperhatikan:\n",
-        "1. Akurasi: Kedua model, baik Random Forest Classifier maupun Gradient Boosting Classifier, memiliki akurasi yang relatif tinggi, sekitar 86.5% untuk Random Forest dan 86.4% untuk Gradient Boosting. Ini menunjukkan bahwa secara keseluruhan, model-model tersebut mampu memprediksi dengan baik sebagian besar kasus.\n",
-        "2. Precision, Recall, dan F1-Score: Ketika melihat hasil dari kelas positif (churn), kita bisa melihat bahwa precision (presisi) dan recall (sensitivitas) untuk kelas positif (1) cenderung lebih rendah dibandingkan dengan kelas negatif (0). Hal ini menunjukkan bahwa model memiliki kecenderungan untuk memprediksi dengan baik ketika data sebenarnya adalah kelas negatif, namun kurang akurat dalam memprediksi kelas positif.\n",
-        "3. Confusion Matrix: Dari confusion matrix, kita bisa melihat bahwa jumlah False Negative (FN) cukup tinggi, terutama dalam memprediksi pelanggan yang akan churn (kelas 1). Ini berarti ada sejumlah pelanggan yang sebenarnya akan churn, tetapi diprediksi tidak akan churn oleh model. Hal ini menjadi penting karena dalam bisnis, memprediksi churn dengan baik penting untuk mengambil tindakan yang tepat untuk mempertahankan pelanggan.\n",
-        "4. Perbandingan antara Model: Secara keseluruhan, kedua model memiliki performa yang serupa dalam hal akurasi dan evaluasi klasifikasi lainnya. Namun, Random Forest Classifier memiliki recall yang sedikit lebih tinggi untuk kelas 1 (recall 0.47) dibandingkan dengan Gradient Boosting Classifier (recall 0.47), yang berarti Random Forest mungkin sedikit lebih baik dalam mengidentifikasi pelanggan yang akan churn. Namun, perbedaan ini tidak signifikan secara statistik.\n",
-        "\n",
-        "Kesimpulan: Meskipun kedua model menunjukkan performa yang relatif baik, masih ada ruang untuk meningkatkan kemampuan mereka dalam memprediksi churn, terutama dalam mengurangi jumlah False Negative (FN). Mungkin perlu dilakukan penyetelan parameter lebih lanjut, pemilihan fitur yang lebih baik, atau penggunaan teknik penanganan ketidakseimbangan kelas untuk meningkatkan performa model dalam kasus ini.\n"
-      ],
-      "metadata": {
-        "id": "IvFRhgkHWnOf"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "# **EVALUASI HASIL DENGAN CROSS VALIDATION**"
       ],
       "metadata": {
@@ -1563,25 +1548,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Dari hasil cross-validation terdapat beberapa hal yang dapat diamati:\n",
-        "1. Random Forest:\n",
-        "Skor cross-validation untuk Random Forest berkisar antara 0.8515 hingga 0.8615 dengan rata-rata skor sebesar 0.8547. Skor yang konsisten dan relatif stabil di sekitar rata-rata menunjukkan bahwa model memiliki kinerja yang konsisten di seluruh fold cross-validation.\n",
-        "2. Gradient Boosting:\n",
-        "Skor cross-validation untuk Gradient Boosting berkisar antara 0.849 hingga 0.8655 dengan rata-rata skor sebesar 0.8571. Skor yang lebih bervariasi dalam rentang yang lebih besar mungkin menunjukkan bahwa model lebih sensitif terhadap variasi dalam data atau mungkin lebih rentan terhadap overfitting.\n",
-        "\n",
-        "Perbandingan:\n",
-        "Secara umum, Gradient Boosting memiliki sedikit skor rata-rata cross-validation yang lebih tinggi dibandingkan dengan Random Forest, menunjukkan bahwa Gradient Boosting mungkin memiliki kinerja yang sedikit lebih baik dalam kasus ini. Namun, perbedaan skor rata-rata antara kedua model tidak signifikan secara statistik. Oleh karena itu, keputusan untuk memilih model tergantung pada preferensi pribadi, kebutuhan bisnis, dan evaluasi lebih lanjut seperti evaluasi performa pada data uji yang belum pernah dilihat sebelumnya.\n",
-        "\n",
-        "Pertimbangan Tambahan:\n",
-        "Penting untuk mempertimbangkan trade-off antara kinerja dan kompleksitas model. Gradient Boosting cenderung lebih kompleks dan memerlukan waktu komputasi yang lebih lama dibandingkan dengan Random Forest. Selain itu, faktor-faktor seperti interpretabilitas model, kebutuhan akan penanganan ketidakseimbangan kelas, dan sifat data dapat memengaruhi pilihan model yang tepat. Dengan demikian, meskipun Gradient Boosting menunjukkan sedikit kinerja yang lebih baik dalam cross-validation, tetapi keputusan akhir untuk memilih model harus didasarkan pada evaluasi yang komprehensif dan pertimbangan praktis yang sesuai dengan kebutuhan kebutuhan user."
-      ],
-      "metadata": {
-        "id": "qeAvw-VpXVF4"
-      }
     },
     {
       "cell_type": "markdown",
@@ -1914,14 +1880,46 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Dari hasil analisis ada beberapa hal yang dapat diamati:\n",
+        "Dari hasil pengujian model terdapat beberapa hal yang dapat diperhatikan:\n",
+        "1. Akurasi: Kedua model, baik Random Forest Classifier maupun Gradient Boosting Classifier, memiliki akurasi yang relatif tinggi, sekitar 86.5% untuk Random Forest dan 86.4% untuk Gradient Boosting. Ini menunjukkan bahwa secara keseluruhan, model-model tersebut mampu memprediksi dengan baik sebagian besar kasus.\n",
+        "2. Precision, Recall, dan F1-Score: Ketika melihat hasil dari kelas positif (churn), kita bisa melihat bahwa precision (presisi) dan recall (sensitivitas) untuk kelas positif (1) cenderung lebih rendah dibandingkan dengan kelas negatif (0). Hal ini menunjukkan bahwa model memiliki kecenderungan untuk memprediksi dengan baik ketika data sebenarnya adalah kelas negatif, namun kurang akurat dalam memprediksi kelas positif.\n",
+        "3. Confusion Matrix: Dari confusion matrix, kita bisa melihat bahwa jumlah False Negative (FN) cukup tinggi, terutama dalam memprediksi pelanggan yang akan churn (kelas 1). Ini berarti ada sejumlah pelanggan yang sebenarnya akan churn, tetapi diprediksi tidak akan churn oleh model. Hal ini menjadi penting karena dalam bisnis, memprediksi churn dengan baik penting untuk mengambil tindakan yang tepat untuk mempertahankan pelanggan.\n",
+        "4. Perbandingan antara Model: Secara keseluruhan, kedua model memiliki performa yang serupa dalam hal akurasi dan evaluasi klasifikasi lainnya. Namun, Random Forest Classifier memiliki recall yang sedikit lebih tinggi untuk kelas 1 (recall 0.47) dibandingkan dengan Gradient Boosting Classifier (recall 0.47), yang berarti Random Forest mungkin sedikit lebih baik dalam mengidentifikasi pelanggan yang akan churn. Namun, perbedaan ini tidak signifikan secara statistik.\n"
+      ],
+      "metadata": {
+        "id": "sRD4bNjCFm7a"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dari hasil cross-validation terdapat beberapa hal yang dapat diamati:\n",
+        "1. Random Forest:\n",
+        "Skor cross-validation untuk Random Forest berkisar antara 0.8515 hingga 0.8615 dengan rata-rata skor sebesar 0.8547. Skor yang konsisten dan relatif stabil di sekitar rata-rata menunjukkan bahwa model memiliki kinerja yang konsisten di seluruh fold cross-validation.\n",
+        "2. Gradient Boosting:\n",
+        "Skor cross-validation untuk Gradient Boosting berkisar antara 0.849 hingga 0.8655 dengan rata-rata skor sebesar 0.8571. Skor yang lebih bervariasi dalam rentang yang lebih besar mungkin menunjukkan bahwa model lebih sensitif terhadap variasi dalam data atau mungkin lebih rentan terhadap overfitting.\n",
+        "\n",
+        "Perbandingan:\n",
+        "Secara umum, Gradient Boosting memiliki sedikit skor rata-rata cross-validation yang lebih tinggi dibandingkan dengan Random Forest, menunjukkan bahwa Gradient Boosting mungkin memiliki kinerja yang sedikit lebih baik dalam kasus ini. Namun, perbedaan skor rata-rata antara kedua model tidak signifikan secara statistik. Oleh karena itu, keputusan untuk memilih model tergantung pada preferensi pribadi, kebutuhan bisnis, dan evaluasi lebih lanjut seperti evaluasi performa pada data uji yang belum pernah dilihat sebelumnya.\n",
+        "\n",
+        "Pertimbangan Tambahan:\n",
+        "Penting untuk mempertimbangkan trade-off antara kinerja dan kompleksitas model. Gradient Boosting cenderung lebih kompleks dan memerlukan waktu komputasi yang lebih lama dibandingkan dengan Random Forest. Selain itu, faktor-faktor seperti interpretabilitas model, kebutuhan akan penanganan ketidakseimbangan kelas, dan sifat data dapat memengaruhi pilihan model yang tepat. Dengan demikian, meskipun Gradient Boosting menunjukkan sedikit kinerja yang lebih baik dalam cross-validation, tetapi keputusan akhir untuk memilih model harus didasarkan pada evaluasi yang komprehensif dan pertimbangan praktis yang sesuai dengan kebutuhan kebutuhan user."
+      ],
+      "metadata": {
+        "id": "jmt6hJAqEppy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Kemudian Dari hasil uji akurasi untuk setiap fold ada beberapa hal yang dapat diamati:\n",
         "1. Akurasi Per Fold:\n",
         "Akurasi Random Forest sebesar 0.8539 dan akurasi Gradient Boosting sebesar 0.8579. Ini menunjukkan bahwa secara rata-rata, model Gradient Boosting memiliki performa yang sedikit lebih baik daripada Random Forest dalam memprediksi kelas target.\n",
         "2. Uji T yang Berpasangan (Paired t-test):\n",
         "Hasil dari uji t yang berpasangan menunjukkan nilai p-value yang tidak terdefinisi (NaN). Hal ini mungkin disebabkan oleh perbedaan yang terlalu kecil antara akurasi dari kedua model atau mungkin ada ketidaksesuaian dalam perhitungan.\n",
         "\n",
-        "Kesimpulan:\n",
-        "Berdasarkan akurasi per fold, model Gradient Boosting memiliki performa yang sedikit lebih baik dibandingkan dengan Random Forest. Untuk lebih lanjutnya dapat dicoba dengan Teknik SMOTE and BAGGING untuk melihat ketidakseimbangan kelasnya.\n"
+        "**Kesimpulan:**\n",
+        "Berdasarkan hasil analisa, model Gradient Boosting memiliki performa yang sedikit lebih baik dibandingkan dengan Random Forest untuk kasus churn pelanggan dengan dataset ini. Untuk lebih lanjutnya dapat dicoba dengan Teknik SMOTE and BAGGING untuk melihat ketidakseimbangan kelasnya.\n"
       ],
       "metadata": {
         "id": "gC04x6MjYhBc"
