--- a/RINNA_RACHMATIKA_DA_TUGAS_2.ipynb
+++ b/RINNA_RACHMATIKA_DA_TUGAS_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNo5PrSEJHF3h54KC/Gsezg",
+      "authorship_tag": "ABX9TyNBoBGx3bBxqnGf9oFrX87B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1919,7 +1919,7 @@
         "Hasil dari uji t yang berpasangan menunjukkan nilai p-value yang tidak terdefinisi (NaN). Hal ini mungkin disebabkan oleh perbedaan yang terlalu kecil antara akurasi dari kedua model atau mungkin ada ketidaksesuaian dalam perhitungan.\n",
         "\n",
         "**Kesimpulan:**\n",
-        "Berdasarkan hasil analisa, model Gradient Boosting memiliki performa yang sedikit lebih baik dibandingkan dengan Random Forest untuk kasus churn pelanggan dengan dataset ini. Untuk lebih lanjutnya dapat dicoba dengan Teknik SMOTE and BAGGING untuk melihat ketidakseimbangan kelasnya.\n"
+        "Berdasarkan hasil analisa, model Gradient Boosting memiliki performa yang sedikit lebih baik dibandingkan dengan Random Forest untuk kasus churn pelanggan dengan dataset ini. Untuk lebih lanjutnya dapat dicoba dengan Teknik SMOTE and BAGGING dalam mengatasi ketidakseimbangan kelas.\n"
       ],
       "metadata": {
         "id": "gC04x6MjYhBc"
