--- a/RINNA_RACHMATIKA_DA_TUGAS_2.ipynb
+++ b/RINNA_RACHMATIKA_DA_TUGAS_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNBoBGx3bBxqnGf9oFrX87B",
+      "authorship_tag": "ABX9TyOgPKsAwTYH39nghgCEoek1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **MODEL SUPERVISED LEARNING - PREDIKSI CHURN PELANGGAN**"
+        "# **TUGAS 2 - PREDIKSI CHURN PELANGGAN**"
       ],
       "metadata": {
         "id": "FuEW_woLaNei"
